ajoute - activate -deactivate (type - facteur)